# Nova-Core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Resources/Engine/Shaders/: Globals.slang  Material.slang  NormalsDebug.frag.slang  NovaUniforms.glsl  NovaUniforms.slang  PositionsDebug.frag.slang  Scene.frag.slang  Scene.vert.slang  VertexColor.frag.slang  model.frag  model.frag.slang  model.vert  model.vert.slang  shader.vert  triangle.glsl  triangle.vert
include/: Api.h
include/Asset/: Asset.h  AssetHandle.h  AssetManager.h
include/Asset/Assets/: MeshAsset.h  ShaderAsset.h
include/Core/: Application.h  Assert.h  GraphicsAPI.h  ImGuiLayer.h  Layer.h  LayerStack.h  Log.h  UUID.h  Window.h
include/ECS/Components/: CameraComponent.h  IDComponent.h  MeshComponent.h  MeshRendererComponent.h  NameComponent.h  TransformComponent.h  WorldTransformComponent.h
include/Events/: ApplicationEvents.h  Event.h  InputEvents.h
include/Layer/: Layer.h
include/Renderer/: Camera.h  FrameBuffer.h  Mesh.h  Renderer.h  Vertex.h
include/Renderer/Backends/OpenGL/: GL_FrameBuffer.h  GL_Mesh.h  GL_Renderer.h  GL_Shader.h  GL_Shaders.h
include/Renderer/Backends/Vulkan/: VK_Common.h  VK_Device.h  VK_Extensions.h  VK_Instance.h  VK_Mesh.h  VK_RenderGraph.h  VK_Renderer.h  VK_Shaders.h  VK_Swapchain.h  VK_ValidationLayers.h
include/Renderer/Graphics/: Camera.h  Material.h  Mesh.h  Vertex.h
include/Renderer/OpenGL/: GL_FrameBuffer.h  GL_Mesh.h  GL_Shader.h
include/Renderer/RHI/: RHI_FrameBuffer.h  RHI_Mesh.h  RHI_RenderGraph.h  RHI_Renderer.h  RHI_ShaderCompiler.h  RHI_ShaderReflection.h  RHI_ShaderResourceSet.h  RHI_ShaderTypes.h  RHI_ShaderUniforms.h  RHI_Shaders.h  RHI_SwapchainDesc.h
include/Scene/: Scene.h
include/Scene/ECS/Components/: CameraComponent.h  IDComponent.h  MeshComponent.h  MeshRendererComponent.h  NameComponent.h  TransformComponent.h  WorldTransformComponent.h
shaders/: program.frag  program.vert
src/Asset/Assets/: MeshAsset.cpp  ShaderAsset.cpp
src/Core/: Application.cpp  ImGuiLayer.cpp  LayerStack.cpp  Log.cpp  Window.cpp
src/Renderer/: Mesh.cpp
src/Renderer/Backends/OpenGL/: GL_FrameBuffer.cpp  GL_Mesh.cpp  GL_Renderer.cpp  GL_Shader.cpp  GL_Shaders.cpp
src/Renderer/Backends/Vulkan/: VK_Device.cpp  VK_Extensions.cpp  VK_Instance.cpp  VK_Mesh.cpp  VK_RenderGraph.cpp  VK_Renderer.cpp  VK_RendererResources.cpp  VK_Shaders.cpp  VK_Swapchain.cpp  VK_ValidationLayers.cpp
src/Renderer/Graphics/: Mesh.cpp
src/Renderer/OpenGL/: GL_FrameBuffer.cpp  GL_Mesh.cpp  GL_Shader.cpp
src/Renderer/RHI/: RHI_Mesh.cpp  RHI_RenderGraph.cpp  RHI_Renderer.cpp  RHI_ShaderCompiler.cpp  RHI_ShaderReflection.cpp  RHI_ShaderResourceSet.cpp  RHI_ShaderTypes.cpp  RHI_Shaders.cpp
src/Scene/: Scene.cpp
vendors/glad/include/glad/: gl.h  vulkan.h
vendors/glad/include/vk_video/: vulkan_video_codec_av1std.h
vendors/glad/src/: vulkan.c
